--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -74,16 +74,16 @@
     <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright &#169; 2012 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
     <string name="pref_wifi_sleep">OVERRIDE WIFI ON:</string>
     <string name="msg_wifi_sleep">%s, the WiFi will be turned off, even if near known WiFi networks.</string>
-    <string name="label_wifi_sleep_screen">When screen is off</string>
-    <string name="msg_wifi_sleep_screen">When in the screen is off</string>
+    <string name="label_wifi_sleep_screen">When screen off</string>
+    <string name="msg_wifi_sleep_screen">When the screen is off</string>
     <string name="label_wifi_sleep_mob_net">And has mobile data</string>
     <string name="msg_wifi_sleep_mob_net">%s, and mobile data is available</string>
-    <string name="label_wifi_sleep_charging">And not charging</string>
-    <string name="msg_wifi_sleep_charging">%s, and not charging</string>
+    <string name="label_wifi_sleep_charging">And battery discharging</string>
+    <string name="msg_wifi_sleep_charging">%s, and the battery is discharging</string>
     <string name="pref_overrides">OVERRIDE WIFI OFF:</string>
     <string name="msg_wifi_override">%s, the WiFi will be turned on, even if far from known WiFi networks. This overrides the OVERRIDE WIFI ON settings.</string>
-    <string name="label_wifi_override_charging">When charging</string>
-    <string name="msg_wifi_override_charging">When charging</string>
+    <string name="label_wifi_override_charging">When battery charging</string>
+    <string name="msg_wifi_override_charging">When the battery is charging</string>
     <string name="widget_label">Wapdroid Service</string>
     <string name="widget_on">On</string>
     <string name="widget_off">Off</string>
